- Fixed link resolving